@@ -1,3 +1,9 @@
+2008-02-25  Jari Aalto  <jari.aalto@cante.net>
+
+	* bin/cygbuild.sh: (CygbuildDefineGlobalScript): Use
+	`CygbuildVersionInfo' instead of unreliable bash substitution
+	code.
+
 2008-02-24  Jari Aalto  <jari.aalto@cante.net>
 
 	* bin/cygbuild.sh (CygbuildPod2man): Add --release to pod2man.
